Comparison JP and US Growth Accounting

--- a/HPfilter.ipynb
+++ b/HPfilter.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2675,7 +2675,7 @@
                 },
                 "yaxis": {
                   "title": {
-                    "text": "Real GDP (log)"
+                    "text": "GDP (log)"
                   }
                 }
               }
@@ -2728,7 +2728,7 @@
         "\n",
         "# Update the layout\n",
         "fig.update_layout(title='US GDP and Business Cycle Trend',xaxis_title='Date',yaxis_title='GDP (log)',hovermode='x unified')\n",
-        "fig2.update_layout(title='JP GDP and Business Cycle Trend',xaxis_title='Date',yaxis_title='Real GDP (log)',hovermode='x unified')\n",
+        "fig2.update_layout(title='JP GDP and Business Cycle Trend',xaxis_title='Date',yaxis_title='GDP (log)',hovermode='x unified')\n",
         "\n",
         "# Save the interactive plots as HTML files\n",
         "plot(fig, filename='us_gdp_plot.html')\n",
@@ -2741,7 +2741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
