--- a/GrowthAccounting.ipynb
+++ b/GrowthAccounting.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -48,7 +48,8 @@
             "        Sweden        1.62%       0.75%              0.60%         0.27%     46.09%         36.98%       16.93%\n",
             "   Switzerland        0.73%       0.42%              0.41%        -0.10%     57.90%         55.99%      -13.89%\n",
             "United Kingdom        1.59%       0.60%              0.73%         0.26%     37.81%         46.10%       16.08%\n",
-            " United States        1.50%       0.92%              0.41%         0.17%     61.34%         27.25%       11.41%\n"
+            " United States        1.50%       0.92%              0.41%         0.17%     61.34%         27.25%       11.41%\n",
+            "       Average        1.43%       0.59%              0.69%         0.15%     37.14%         50.97%       11.88%\n"
           ]
         }
       ],
@@ -67,8 +68,7 @@
         "pwt1001 = pd.read_stata(url)\n",
         "\n",
         "# Filter and select relevant columns\n",
-        "countries = ['Australia', 'Austria', 'Belgium', 'Canada', 'Denmark', 'Finland','France','Germany','Greece','Iceland','Ireland','Italy','Japan',\n",
-        "             'Netherlands', 'New Zealand', 'Norway', 'Portugal', 'Spain' ,'Sweden', 'Switzerland', 'United Kingdom', 'United States']\n",
+        "countries = ['Australia', 'Austria', 'Belgium', 'Canada', 'Denmark', 'Finland', 'France', 'Germany', 'Greece', 'Iceland', 'Ireland', 'Italy', 'Japan', 'Netherlands', 'New Zealand', 'Norway', 'Portugal', 'Spain', 'Sweden', 'Switzerland', 'United Kingdom', 'United States']\n",
         "data = pwt1001.loc[pwt1001['country'].isin(countries)][['year', 'countrycode', 'country', 'rgdpna', 'rnna', 'emp', 'avh', 'labsh', 'hc', 'rtfpna']]\n",
         "data = data.loc[(data['year'] >= 1975) & (data['year'] <= 2019)].dropna()\n",
         "\n",
@@ -90,11 +90,9 @@
         "    hours_growth = calculate_average_growth_rate(country_data, 1975, 2019, 'hours_per_worker')\n",
         "    labor_growth = (1 - alpha) * (hc_growth + hours_growth)\n",
         "    tfp_growth = gdp_growth - capital_deepening - labor_growth\n",
-        "    \n",
         "    tfp_share = tfp_growth / gdp_growth\n",
         "    capital_share = capital_deepening / gdp_growth\n",
         "    labor_share = labor_growth / gdp_growth\n",
-        "    \n",
         "    results.append({\n",
         "        'Country': country,\n",
         "        'Growth Rate': gdp_growth,\n",
@@ -109,7 +107,25 @@
         "# Create a DataFrame from the results\n",
         "growth_accounting_table = pd.DataFrame(results)\n",
         "\n",
-        "# Display the table\n",
+        "# Calculate the average values for each column\n",
+        "average_values = {\n",
+        "    'Country': 'Average',\n",
+        "    'Growth Rate': growth_accounting_table['Growth Rate'].mean(),\n",
+        "    'TFP Growth': growth_accounting_table['TFP Growth'].mean(),\n",
+        "    'Capital Deepening': growth_accounting_table['Capital Deepening'].mean(),\n",
+        "    'Labor Growth': growth_accounting_table['Labor Growth'].mean(),\n",
+        "    'TFP Share': growth_accounting_table['TFP Share'].mean(),\n",
+        "    'Capital Share': growth_accounting_table['Capital Share'].mean(),\n",
+        "    'Labor Share': growth_accounting_table['Labor Share'].mean()\n",
+        "}\n",
+        "\n",
+        "# Convert the average_values dictionary to a DataFrame\n",
+        "average_values_df = pd.DataFrame([average_values])\n",
+        "\n",
+        "# Concatenate the average_values_df with the growth_accounting_table\n",
+        "growth_accounting_table = pd.concat([growth_accounting_table, average_values_df], ignore_index=True)\n",
+        "\n",
+        "# Display the updated table\n",
         "print(growth_accounting_table.to_string(index=False, float_format='{:.2%}'.format))"
       ]
     }
@@ -133,7 +149,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.11"
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
