add Average for each term

--- a/GrowthAccounting.ipynb
+++ b/GrowthAccounting.ipynb
@@ -59,8 +59,8 @@
         "def calculate_average_growth_rate(data, start_year, end_year, column):\n",
         "    start_value = data.loc[data['year'] == start_year, column].iloc[0]\n",
         "    end_value = data.loc[data['year'] == end_year, column].iloc[0]\n",
-        "    num_years = end_year - start_year\n",
-        "    avg_growth_rate = (end_value / start_value) ** (1 / num_years) - 1\n",
+        "    years = end_year - start_year\n",
+        "    avg_growth_rate = (end_value / start_value) ** (1 / years) - 1\n",
         "    return avg_growth_rate\n",
         "\n",
         "# Load data\n",
